<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_uam_sim</name>
  <version>0.0.0</version>
  <description>Package for UAM simulations with PX4</description>
  <maintainer email="dchaikalis@tudelft.nl">Dimitris Chaikalis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>  
  <depend>std_msgs</depend>  
  <depend>gz_sim_vendor</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>  
  <depend>gz_plugin_vendor</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
